# danwiz

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REPOSITORY-README-TEMPLATE.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml  security.yml  toolkit-tests.yml  witrt-ci.yml
docs/: README.md  git-platform-architecture.md  github-actions-cost-controls.md  github-projects-search-pilot.md  index.html  sports-management-system-publication-status.md  styles.css
projects/wisdom-it-readiness-toolkit/: CHANGELOG.md  CONTRIBUTING.md  PROMOTION_CHECKLIST.md  README.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  pyproject.toml
projects/wisdom-it-readiness-toolkit/assessments/: quick-check-v0.1.json
projects/wisdom-it-readiness-toolkit/docs/: accessibility-review.md  architecture.md  data-dictionary.md
projects/wisdom-it-readiness-toolkit/examples/: example-report.md  synthetic-responses.json
projects/wisdom-it-readiness-toolkit/src/: cli.py  report.py  scorer.py
projects/wisdom-it-readiness-toolkit/tests/: test_report.py  test_scorer.py
scripts/: validate_profile.py
