[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "wisdom-it-readiness-toolkit"
version = "0.1.0"
description = "Practical assessments, scoring, and reports for technology readiness."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Dane Wisdom" }
]
keywords = ["it-readiness", "cybersecurity", "assessment", "small-business", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Systems Administration"
]

[project.scripts]
witrt = "cli:main"

[tool.setuptools]
py-modules = ["cli", "report", "scorer"]
package-dir = {"" = "src"}
